# docs/swagger.json
@@ -731,6 +731,42 @@
                     }
                 ],
                 "responses": {}
+            },
+            "delete": {
+                "description": "cancel following of a user",
+                "tags": [
+                    "User"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user's ethereum address",
+                        "name": "address",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user's ethereum signaturemessage",
+                        "name": "signaturemessage",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user's ethereum signature",
+                        "name": "signature",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "the ethereum address of the user who you want to unfollow",
+                        "name": "address",
+                        "in": "path"
+                    }
+                ],
+                "responses": {}
             }
         },
         "/user/followers": {
